--- a/client/src/App.css
+++ b/client/src/App.css
@@ -356,6 +356,7 @@ body {
   max-width: 100vw;
   max-height: 100vh;
   aspect-ratio: 16 / 9;
+  container-type: inline-size;
   border: clamp(2px, 0.16vw, 4px) solid black;
   overflow: hidden;
   z-index: 99;
