--- a/client/src/components/ThrowTechEffect.css
+++ b/client/src/components/ThrowTechEffect.css
@@ -81,7 +81,7 @@
   left: 50%;
   transform: translateX(-50%);
   font-family: "Bungee", cursive;
-  font-size: clamp(0.59rem, 1.11vw, 0.89rem);
+  font-size: 0.74cqw;
   color: #00ff88;
   -webkit-text-stroke: 2px #000;
   paint-order: stroke fill;
